# file-o-saurus-rex

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Scrum.xlsx  cmake_install.cmake  compile_flags.txt  file-o-saurus-rex
FileRex/: CMakeLists.txt  FileRex  Makefile  cmake_install.cmake
include/: FileRex.h
src/: FileRex.cpp  main.cpp
